@@ -9,6 +9,7 @@ CHANGELOG
 Version 3.0.28, 2008-XXX
 
 - FIX: Single <br> between two blocks now creates a new line
+- FIX: Set table attribute "repeat" to 0
 
 Version 3.0.27, 2008-10-04
 
